# python-sdk

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  MANIFEST.in  README.md  README.zh.md  RELEASE.md  RELEASE.zh.md  SECURITY.md  SECURITY.zh.md  pyproject.toml
.github/workflows/: python-sdk-ci.yml  python-sdk-pypi-release.yml
docs/superpowers/specs/: 2026-07-10-public-sdk-hardening-design.md
memaura/: __init__.py  client.py  memory.py  models.py  types.py
omem/: __init__.py  client.py  memory.py  models.py  types.py
tests/: __init__.py  test_memory.py
