[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memaura"
version = "1.0.0"
description = "Python SDK for the MemAura memory service"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "MemAura"}]
keywords = ["ai", "memory", "agent", "llm", "vector-search", "long-term-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
# Package only the public SDK module; keep repo tests out of user installs.
packages = {find = {include = ["memaura*"], exclude = ["tests*"]}}

[tool.setuptools.package-data]
memaura = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
